Source/WebKit/qt/declarative/qdeclarativewebview.cpp
@@ -730,11 +730,11 @@ QWebPage* QDeclarativeWebView::page() const
     See QWebSettings for details of these properties.
 
     \qml
-        WebView {
-            settings.pluginsEnabled: true
-            settings.standardFontFamily: "Arial"
-            ...
-        }
+    WebView {
+        settings.pluginsEnabled: true
+        settings.standardFontFamily: "Arial"
+        // ...
+    }
     \endqml
 */
 QDeclarativeWebSettings* QDeclarativeWebView::settingsObject() const
